Added hw2 submission 1 patch file

--- a/homework2/writeup.tex
+++ b/homework2/writeup.tex
@@ -88,6 +88,27 @@
 	\end{itemize}
 
 	\section*{Version control log}
+	\begin{center}
+				\begin{tabular}{ |c|c|c| }
+					\hline
+					Date & Author & Description \\
+					\hline
+					2017-10-12 & Zach Lerew & Initial directory and hw2 files copied from hw1 \\
+					2017-10-12 & Zach Lerew & Added gitignore, writeup sections, removed hw1 code \\
+					2017-10-19 & Zach Lerew & Added noop base code from block directory \\
+					2017-10-20 & Zach Lerew & Copied noop base into sstf-iosched.c \\
+					2017-10-20 & Zach Lerew & Replaced noop references with clook \\
+					2017-10-20 & Rohan Barve & Modified Kconfig to use a custom scheduler, reorganized directory \\
+					2017-10-21 & Rohan Barve & Added print statements for testing and debugging \\
+					2017-10-22 & Zach Lerew & Modified clook\_add function to insert sort requests to the correct place in the queue \\
+					2017-10-22 & Zach Lerew & Added comments to source code and cleaned up\\
+					2017-10-22 & Rohan Barve & Moved design descriptions from team meeting scratch notes to writeup \\
+					2017-10-23 & Rohan Barve & Answered questions in writeup \\
+					2017-10-23 & Zach Lerew & Added version control log to writeup \\
+					2017-10-24 & Rohan Barve & Added kernel patch file \\
 
+					\hline
+				\end{tabular}
+			\end{center}
 
 \end{document}
