--- a/homework3/writeup.tex
+++ b/homework3/writeup.tex
@@ -12,7 +12,7 @@
 \def\name{Group 26}
 
 
-\title{Homework 2 Report\\\large CS444 Fall17}
+\title{Homework 3 Report\\\large CS444 Fall17}
 \author{Zach Lerew, Rohan Barve\\\large Group 26}
 \date{\today}
 
@@ -24,9 +24,8 @@
 	\begin{titlingpage}
 		\maketitle
 		\begin{abstract}
-			\noindent Homework 2 involves modifying the linux-yocto kernel to use a different I/O scheduler algorithm.
-			The algorithm this team chose to use was the C-LOOK algorithm due to its simplicity.
-			This assignment involved modifying the kernel at a very low level, and learning how to rebuild and run it, and test that the changes worked.
+			\noindent Homework 3 involves building an ecrypted block device driver using crypto  API and LDD3 reference. The team chose to first test a reference device driver available using the LDD3 resource and then added encryption to the existing device driver and tested it for correctness on the qemu VM. 
+		
 		\end{abstract}
 	\end{titlingpage}
 
